fix(layout): improve visibility

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
     align-items: center;
     width: 50px;
     height: 50px;
-    background-color: transparent;
+    background-color: white;
     border-radius: 5px;
     border-color: gray;
     border-style: solid;
